# neuronpedia-local

./: .gitignore  .gitmodules  README.md  app.py  pyproject.toml  requirements.txt
static/: index.html
